--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,11 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "start": "vite",
     "dev": "vite",
-    "build": "vite build"
-  },
+    "build": "vite build",
+    "serve": "vite preview"
+  },  
   "eslintConfig": {
     "extends": [
       "react-app",
