--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "install-deps": "npm install && cd backend && npm install && cd ../frontend && npm install"
   },
   "devDependencies": {
+    "@vitejs/plugin-react": "^5.1.1",
     "concurrently": "^7.6.0",
     "vite": "^7.2.2"
   },
