--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "install-deps": "npm install && cd backend && npm install && cd ../frontend && npm install"
   },
   "devDependencies": {
+    "@types/react": "^19.2.6",
+    "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.1",
     "concurrently": "^7.6.0",
-    "vite": "^7.2.2"
+    "vite": "^7.2.3"
   },
   "keywords": [
     "portfolio",
@@ -24,6 +26,7 @@
   "author": "Mohammed Ashique S",
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.13.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
